# fprime-artemis-cubesat

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  project.cmake  settings.ini
Components/: CMakeLists.txt
Components/LedBlinker/: CMakeLists.txt  LedBlinker.cpp  LedBlinker.fpp  LedBlinker.hpp
Isc/: CMakeLists.txt  Main.cpp  settings.ini
Isc/LedBlinker/: CMakeLists.txt  LedBlinker.cpp  LedBlinker.fpp  LedBlinker.hpp
Isc/Top/: CMakeLists.txt  IscPackets.xml  IscTopology.cpp  IscTopology.hpp  IscTopologyDefs.hpp  instances.fpp  topology.fpp
Isc/config/: FpConfig.hpp
RpiFSW/: CMakeLists.txt  Main.cpp  README.md
RpiFSW/Camera/: CMakeLists.txt  Camera.cpp  Camera.fpp  Camera.hpp
RpiFSW/Camera/docs/: sdd.md
RpiFSW/Top/: CMakeLists.txt  RpiFSWPackets.xml  RpiFSWTopology.cpp  RpiFSWTopology.hpp  RpiFSWTopologyDefs.hpp  instances.fpp  topology.fpp
TeensyFSW/: CMakeLists.txt  Main.cpp  README.md
TeensyFSW/Heater/: CMakeLists.txt  Heater.cpp  Heater.fpp  Heater.hpp
TeensyFSW/ModeManager/: CMakeLists.txt  ModeManager.cpp  ModeManager.fpp  ModeManager.hpp
TeensyFSW/PDU/: CMakeLists.txt  PDU.cpp  PDU.fpp  PDU.hpp
TeensyFSW/Sensors/: CMakeLists.txt
TeensyFSW/TlmDispatcher/: CMakeLists.txt  TlmDispatcher.cpp  TlmDispatcher.fpp  TlmDispatcher.hpp
TeensyFSW/Top/: CMakeLists.txt  TeensyFSWPackets.xml  instances.fpp  (+4 more)
TeensyGDS/: CMakeLists.txt  Main.cpp  README.md
config/: AcConstants.fpp  AcConstants.ini  FpConfig.h
docs/: SettingUpRPi.md
lib/: CMakeLists.txt
lib/arduino/: CMakeLists.txt
scripts/: copy_rules.sh
(+54 files in other folders)
